--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: client-service
+    name: bootcoin-service
   cloud:
     config:
       uri: http://localhost:8081
